<resources>
    <string name="app_name">ScoreApplication</string>
    <string name="action_settings">Settings</string>
    <string name="buttonSearch">Make a search</string>
    <string name="buttonFavorite">Favorite</string>
    <string name="hello">Welcome on MyScore</string>
    <string name="competitionChoice"> Choose a competition </string>
    <string name="championship"> Championship </string>
    <string name="ligue2">League 2</string>
    <string name="dateChoice"> Choose a date </string>
    <string name="from"> From </string>
    <string name="to"> To </string>
    <string name="submit"> Submit </string>
    <string name="AddFavorite"> Add favorite </string>

    <string name="buttonOffline">Offline</string>
    <string name="offline_info">Offline Mode</string>
    <string name="offline_button_countries">Countries</string>
    <string name="titleChamp">Championships</string>
    <string name="titleTeam">Teams</string>
    <string name="titleDate">Date</string>
    <string name="titleResult">Result</string>
    <string name="titleFavorite">Favorite</string>
    <string name="titleSettings">Settings</string>
    <string name="strDate">Choose a date</string>
    <string name="strFrom">From</string>
    <string name="strTo">To</string>
    <string name="strBtnDate">SUBMIT</string>
</resources>
