<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="20dp"
        tools:context=".MainActivity"> </TextView>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSearch"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#191970"
        android:layout_margin="20sp"
        android:padding="20sp"/>


    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonQuiz"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#191970"
        android:layout_margin="20sp"
        android:padding="20sp"/>

    <Button
        android:id="@+id/buttonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFavorite"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:background="#191970"
        android:layout_margin="20sp"
        android:padding="20sp"/>


</LinearLayout>

